Lab 1: Fiber handlers routes fix
