# 1_Layering/internal/controller/server/fiber/docs/swagger.json
@@ -10,9 +10,9 @@
         "version": "1.0.0"
     },
     "paths": {
-        "/api/book": {
+        "/api/books": {
             "get": {
-                "description": "Get Book by ID.",
+                "description": "Get Books with count and offset as optional params.\nCount is the number of books to return.\nOffset is the number of books to skip.",
                 "consumes": [
                     "application/json"
                 ],
@@ -22,21 +22,29 @@
                 "tags": [
                     "Book"
                 ],
-                "summary": "Get Book",
+                "summary": "Get Books",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Book ID",
-                        "name": "id",
-                        "in": "query",
-                        "required": true
+                        "description": "Number of books to return",
+                        "name": "count",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Offset",
+                        "name": "offset",
+                        "in": "query"
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/domain.Book"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/domain.Book"
+                            }
                         }
                     },
                     "400": {
@@ -157,9 +165,9 @@
                 }
             }
         },
-        "/api/books": {
+        "/api/books/{id}": {
             "get": {
-                "description": "Get Books with count and offset as optional params.\nCount is the number of books to return.\nOffset is the number of books to skip.",
+                "description": "Get Book by ID.",
                 "consumes": [
                     "application/json"
                 ],
@@ -169,29 +177,21 @@
                 "tags": [
                     "Book"
                 ],
-                "summary": "Get Books",
+                "summary": "Get Book",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Number of books to return",
-                        "name": "count",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
-                        "description": "Offset",
-                        "name": "offset",
-                        "in": "query"
+                        "description": "Book ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/domain.Book"
-                            }
+                            "$ref": "#/definitions/domain.Book"
                         }
                     },
                     "400": {
